# maeh

./: Cargo.toml  LICENSE  README.md  install.sh  llms.txt
.github/workflows/: ci.yml  release.yml
docs/: bash-helper-parity.md  implementation-plan.md  installation.md  orchestration-boundary-plan.md
src/: backend.rs  main.rs
tests/: backend.rs  cli.rs
