[package]
name = "maeh"
version = "0.1.3"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "Rust CLI for hmph/Herdr agent orchestration"
repository = "https://github.com/ahnsv/maeh"
readme = "README.md"
keywords = ["cli", "agents", "orchestration", "herdr"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[[bin]]
name = "maeh"
path = "src/main.rs"
test = false

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

